...
  IOS_MODE,
  ANDROID_DISPLAY,
  IOS_DISPLAY,
} from '../src/constants';
import * as RNLocalize from 'react-native-localize';

const timezone = [
  120,
  0,
  -120,
  undefined,
  'America/New_York',
  'America/Vancouver',
...
        )}
        <View>
          <View style={styles.header}>
            <ThemedText style={styles.text}>Example DateTime Picker</ThemedText>
          </View>
          <View>
            <Info testID={"utcTime"} title={'UTC Time:'} body={moment(date).utc().format()} />
            <Info testID={"deviceTime"} title={'Device Time:'} body={moment(date).format()} />
            <Info testID={"deviceTzName"} title={'Device TzName:'} body={RNLocalize.getTimeZone()} />
            {(tzName || !isNaN(tzOffsetInMinutes)) && (
              <>
                <Info
                  testID={"overriddenTime"}
                  title={'Overridden Time:'}
                  body={(() => {
                    if (tzName) {
                      return moment(date).tz(tzName).format();
                    }
                    if (tzOffsetInMinutes !== undefined) {
                      return moment(date).utcOffset(tzOffsetInMinutes).format();
                    }
                    return '';
                  })()}
                />
                <Info
                  testID={tzName ? "overriddenTzName": "overriddenTzOffset"}
                  title={(() => {
                    if (tzName) {
                      return 'Overridden TzName:';
                    }
                    if (tzOffsetInMinutes !== undefined) {
                      return 'Overridden TzOffset:';
...
            <Text style={{flexShrink: 1}}>
              This is a very very very very very very long text to showcase
              behavior
            </Text>
            {show && (
              <DateTimePicker
                testID="dateTimePicker"
                timeZoneOffsetInMinutes={tzOffsetInMinutes}
                timeZoneName={tzName}
                minuteInterval={interval}
                maximumDate={maximumDate}
                minimumDate={minimumDate}
                value={date}
...
